# polytech-labs

./: Lr6.py  README.md
assembler/: README.md
assembler/data/: Домашнее задание Лютов А.В. 30022.docx
assembler/data/base_src/: LABV10.CPP  LABV11.CPP  LABV5.CPP  LABV6.CPP  LABV7.CPP  LABV9.CPP  Labv1.cpp  Labv12.CPP  Labv13.cpp  Labv14.cpp  Labv15.cpp  Labv2.cpp  Labv3.cpp  Labv4.cpp  Labv8.cpp
assembler/kurs_var_13/: Makefile
assembler/kurs_var_13/src/: decline_lastname_dative_macro.asm  decline_lastname_macro.asm  decline_lastname_nominative_macro.asm  decline_lastname_predlositive_macro.asm  decline_lastname_roditive_macro.asm  decline_lastname_tvoritive_macro.asm  decline_lastname_vinitive_macro.asm  io_macro.asm  main.asm
assembler/kurs_var_20/: main.asm
assembler/lab-2/: ex-2.cpp  ex-3.cpp  ex-4.cpp  ex-5.cpp
assembler/lab-3/: hello_world.asm  lab_3_2.asm  lab_3_3.asm
assembler/lab-4/: lab-4-2.asm  lab-4-3.asm  lab-4-5.asm  lab-4.asm
assembler/lab-5/: lab-5-1.asm  lab-5-2.asm
assembler/lab-6/: LABV6.CPP  lab-6.asm
assembler/lab-7/: main.cpp
calc_math/kurs-var-14/: generateGraphs.py  output.txt  pendulum_params.mod  Лютов АВ 30022 Вариант 14 Курсовая.bak  Лютов АВ 30022 Вариант 14 Курсовая.docx
calc_math/kurs-var-14/src/: main.f90
calc_math/kurs-var-25/: Makefile  generateGraphs.py  output.txt  pendulum_params.mod
calc_math/kurs-var-25/src/: main.f90
calc_math/lab-1/: Makefile
calc_math/lab-1-var-14/: Makefile  output.txt  Лютов_Александр_30022_Вариант_14_Задание_1.bak
calc_math/lab-1-var-14/src/: main.f90
calc_math/lab-1-var-25/: Makefile  integral_func_mod.mod  output.txt
calc_math/lab-1-var-25/src/: integral_func.f90  main.f90
calc_math/lab-1/src/: integral_func.f90  main.f90
calc_math/lab-2/: Makefile
calc_math/lab-2-var-14/: Makefile
calc_math/lab-2/src/: main.f90
calc_math/lab-3-var-14/: Makefile  output.txt
calc_math/lab-3-var-14/src/: main.f90
calc_math/lab-3-var-25/: output.txt
calc_math/lab-3-var-25/src/: main.f90
calc_math/vlad-lab-2/src/: main.f90
cpp/: README.md
cpp/lab_1/example/: bitmapCheck.sln
cpp/lab_1/lab_1_2/: lab_1_2.sln
cpp/var_13/lab-3/: CMakeLists.txt  main.cpp  polinom.cpp  polinom.h
cpp/var_13/lab-4/: CMakeLists.txt  main.cpp  point.h  rectangle.cpp  rectangle.h  romb.cpp  romb.h  shape.cpp  shape.h
cpp/var_13/lab_1/: CMakeLists.txt  main.cpp
cpp/var_13/lab_2/: CMakeLists.txt  haveEqualsChar.cpp  haveEqualsChar.h  main.cpp
cpp/var_20/lab-2/: CMakeLists.txt  main.cpp
cpp/var_20/lab-3/: CMakeLists.txt  geoCoord.cpp  geoCoord.h  main.cpp
cpp/var_20/lab_1/: CMakeLists.txt  main.cpp
cpp_stl/: Курсовая ООП Лютов А.В. 30022.pptx  Лютов_Александр_30022_Курсовая.docx
cpp_stl/build-lab_1-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  lab_1
cpp_stl/build-lab_1-Desktop-Debug/.qtc_clangd/: compile_commands.json
cpp_stl/build-lab_2-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  data.txt  lab_2  qtcsettings.cmake
cpp_stl/build-lab_2-Desktop-Debug/.qtc_clangd/: compile_commands.json
cpp_stl/data/MFC2017/: lesson.dsp  lesson.dsw  lesson.htm  lesson.ncb  lesson.opt  lesson.plg  lesson000.htm  lesson001.htm  lesson002.htm  lesson003.htm  lesson004.htm  lesson005.htm  lesson006.htm  lesson007.htm  lesson008.htm  lesson009.htm  lesson010.htm  lesson011.htm  lesson012.htm  lesson013.htm  lesson014.htm  lesson015.htm  lesson016.htm  lesson017.htm  lesson018.htm  lesson019.htm  lesson021.htm  lesson022.htm  lesson023.htm  lesson024.htm  lesson025.htm  lesson026.htm  lesson027.htm  lesson028.htm  lesson029.htm  lesson031.htm  lesson032.htm  lesson033.htm  lesson034.htm  lesson035.htm  (+12 more)
cpp_stl/data/STL/: Thumbs.db  stl_task.7z
cpp_stl/lab_1/: CMakeLists.txt  data.txt  lab_1.cpp  lab_1.h
cpp_stl/lab_2/: main.cpp
cpp_stl/lab_3/: CMakeLists.txt  PriorityQueue.cpp  PriorityQueue.h  main.cpp
cpp_stl/lab_4/: CMakeLists.txt  PhoneBookManager.cpp  PhoneBookManager.h  main.cpp
cpp_stl/lab_5/: main.cpp
cpp_stl/lab_6/lab_6_1/: CMakeLists.txt  input.txt  main.cpp
cpp_stl/lab_6/lab_6_2/: CMakeLists.txt  main.cpp
cpp_stl/lab_7/: CMakeLists.txt  main.cpp  statisticcollector.cpp  statisticcollector.h
cpp_stl/lab_8/lab_8_1/: CMakeLists.txt  main.cpp
cpp_stl/lab_8/lab_8_2/: CMakeLists.txt  main.cpp
cpp_stl/smartNote/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  note.cpp  note.h  notemanager.cpp  notemanager.h
fortran-labs/: README.md
math_modeling/lab_1/: CMakeLists.txt  main.cpp  output.xlsx  в513090430022_Лютов_№1.docx
math_modeling/lab_2/: CMakeLists.txt  main.cpp
math_modeling/lab_2/var_1/: main.cpp
math_modeling/lab_2/var_2/: main.cpp
math_modeling/lab_3/: в5130904_30022_Лютов_3.docx
math_modeling/lab_3/GenRandNumb/: CMakeLists.txt  main.cpp  normaldistributiongenerator.cpp  normaldistributiongenerator.h
math_modeling/lab_4/lab_4/: Y_e_original.txt  main.cpp
math_modeling/lab_4/var_1/: Y_e.txt  iteration_results2.300000_1.500000.txt  iteration_results2.400000_2.100000.txt  iteration_results3.000000_2.100000.txt  iteration_results3.800000_2.900000.txt  iteration_results4.100000_2.200000.txt  test_result_2.300000_1.500000.txt  test_result_2.400000_2.100000.txt  test_result_3.000000_2.100000.txt  test_result_3.800000_2.900000.txt  (+1 more)
math_modeling/lab_4/var_2/lab_4/: CMakeLists.txt  main.cpp
math_modeling/math_model_lab_2_vlad/: CMakeLists.txt  main.cpp
os/lab_1/: lab_1.sln
pc_architecture/lab_3/: CMakeLists.txt  main.cpp
pc_architecture/lab_4/: CMakeLists.txt
pc_architecture/lab_4/src/: mainwindow.cpp  mainwindow.h
pc_architecture/lab_5/: CMakeLists.txt  main.cpp
pc_architecture/lab_5_qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
pc_architecture/lab_6/: Lr6.py
pc_architecture/lab_7/: generateJpg.py
smartNote/: mainwindow.cpp  mainwindow.h  note.cpp  notemanager.h
verilog/filedatech/: readme.txt
verilog/lab_3/: Текстовый документ.txt
verilog/test/: test.adf
vhdl/: README.md
vhdl/lab-7/: hpi_8in_8out.bdf
(+1783 files in other folders)
